@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-20T16:15:07Z",
+  "timestamp" : "2022-10-21T00:39:39Z",
   "count_outdated" : 1852,
   "uniques_outdated" : 579,
-  "count" : 1879,
+  "count" : 1880,
   "uniques" : 596,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
