@@ -1,3 +1,11 @@
+2022-10-21T00:39:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3293938536 # 957
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 579 1852 / 596 1879
+* notice: next accum: outdated-unq outdated-all / unq all: 579 1852 / 596 1880
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-20]
+
 2022-10-20T16:15:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3291222490 # 956
 * notice: last 14d: unq all: 6 27
